--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             background-color: black;
         }
     </style>
-    <title>Document</title>
+    <title>Game Tetris</title>
 </head>
 
 <body>
